--- a/packages/checkout/sdk-sample-app/package.json
+++ b/packages/checkout/sdk-sample-app/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "@imtbl/checkout-sdk-web": "0.0.0",
+    "@imtbl/checkout-sdk": "0.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
