--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -3,9 +3,9 @@
   "description": "Playground application for Immutable Economy SDK",
   "version": "0.0.0",
   "dependencies": {
-    "@imtbl/checkout-sdk-web": "0.0.0",
-    "@imtbl/checkout-ui-types": "0.0.0",
+    "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
+    "@imtbl/checkout-widgets-react": "0.0.0",
     "@imtbl/economy": "0.0.0",
     "@imtbl/passport": "0.0.0"
   },
