--- a/packages/checkout/widgets-types/package.json
+++ b/packages/checkout/widgets-types/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "author": "",
   "dependencies": {
-    "@imtbl/checkout-sdk-web": "0.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@imtbl/checkout-sdk-web": "0.0.0"
   },
   "devDependencies": {
     "@parcel/packager-ts": "^2.8.3",
@@ -19,6 +17,10 @@
   },
   "license": "ISC",
   "module": "dist/index.js",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "scripts": {
     "build": "parcel build",
     "build:dist": "npm i && npm run build && npm run dist",
