--- a/sdk/package.json
+++ b/sdk/package.json
@@ -10,12 +10,9 @@
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.3.5",
-    "eslint": "^8.37.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
-    "oidc-client-ts": "^2.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "oidc-client-ts": "^2.2.1"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
@@ -79,6 +76,10 @@
   "license": "Apache-2.0",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "yarn packageList && yarn updateDependencies && yarn regenModules && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
