--- a/packages/checkout/widgets-react/package.json
+++ b/packages/checkout/widgets-react/package.json
@@ -11,11 +11,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.37.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "parcel": "^2.8.3",
     "typescript": "^4.9.5"
   },
@@ -26,6 +32,5 @@
     "build:dist": "npm i && npm run build && npm run dist",
     "start": "parcel watch"
   },
-  "source": "index.ts",
-  "types": "dist/types.d.ts"
+  "source": "index.ts"
 }
