--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@metamask/detect-provider": "^2.0.0",
+    "axios": "^1.4.0",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
