--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": ["airbnb", "airbnb-typescript"],
+  "ignorePatterns": ["jest.config.*"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
@@ -59,6 +60,7 @@
         "selector": "typeProperty",
         "format": ["camelCase"]
       }
-    ]
+    ],
+    "import/prefer-default-export": ["off"]
   }
 }
