--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,6 +3,7 @@
 /packages/config @immutable/developer-experience
 /packages/internal/toolkit @immutable/developer-experience
 /packages/internal/dex @immutable/tokens
+/packages/internal/bridge @immutable/rollups
 /packages/passport @immutable/passport
 /packages/provider @immutable/wallets
 /packages/checkout @immutable/wallets
