--- a/packages/internal/dex/sdk-sample-app/package.json
+++ b/packages/internal/dex/sdk-sample-app/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "setup": "cd ../../../../ && yarn build:all"
   }
 }
