post merge updates

--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -17,8 +17,8 @@
     "@biom3/design-tokens": "0.1.4-beta",
     "@biom3/react": "^0.3.0-beta",
     "@ethersproject/providers": "^5.7.2",
-    "@imtbl/checkout-sdk-web": "0.0.0",
-    "@imtbl/checkout-ui-types": "0.0.0",
+    "@imtbl/checkout-sdk": "0.0.0",
+    "@imtbl/checkout-widgets-react": "0.0.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
