--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "extends": ["airbnb", "airbnb-typescript"],
   "ignorePatterns": ["jest.config.*"],
   "parser": "@typescript-eslint/parser",
