Fix remaining lint violations
Ignore a few that are better fixed by the Passport team.

Co-authored-by: Nathan Ballantyne <Nathan-Ballantyne@users.noreply.github.com>
Co-authored-by: Nik <CodeSchwert@users.noreply.github.com>

--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -5,6 +5,7 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@ethersproject/abstract-provider": "^5.7.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@imtbl/provider": "0.0.0",
