--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
         "format": ["camelCase"]
       }
     ],
-    "import/prefer-default-export": ["off"]
+    "import/prefer-default-export": ["off"],
+    "max-classes-per-file": ["off"]
 }
   
