try setting module name mapper for jest

--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -45,5 +45,10 @@
     "typecheck": "tsc --noEmit"
   },
   "source": "src/index.ts",
-  "types": "dist/types.d.ts"
+  "types": "dist/types.d.ts",
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  }
 }
