--- a/packages/internal/bridge/bridge-sample-app/package.json
+++ b/packages/internal/bridge/bridge-sample-app/package.json
@@ -8,10 +8,13 @@
     "eslint": "^8.37.0",
     "eslint-config-next": "13.3.1",
     "ethers": "^5.7.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "private": true,
   "scripts": {
-    "lint": "eslint ./src --ext .ts --max-warnings=0"
-  }
+    "lint": "eslint ./src --ext .ts --max-warnings=0",
+    "deposit": "ts-node --esm ./src/index.ts"
+  },
+  "type": "module"
 }
