--- a/packages/internal/bridge/bridge-sample-app/package.json
+++ b/packages/internal/bridge/bridge-sample-app/package.json
@@ -14,7 +14,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint ./src --ext .ts --max-warnings=0",
-    "deposit": "ts-node --esm ./src/index.ts"
+    "deposit": "ts-node --esm ./src/index.ts",
+    "build": ""
   },
   "type": "module"
 }
