--- a/packages/internal/bridge/bridge-sample-app/tsconfig.json
+++ b/packages/internal/bridge/bridge-sample-app/tsconfig.json
@@ -18,10 +18,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
       ],
+      "@imtbl/bridge-sdk/*": [
+        "../sdk/dist/*"
+      ]
     }
   },
   "include": [
