--- a/packages/internal/bridge/sdk/tsconfig.json
+++ b/packages/internal/bridge/sdk/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "outDir": "./dist",
-    "rootDirs": ["src"],
+    "rootDirs": [
+      "src"
+    ],
     "target": "es2022",
     "module": "es2022",
     "moduleResolution": "node",
@@ -19,6 +21,11 @@
     "noEmit": true,
     "declaration": true,
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
