--- a/packages/internal/bridge/sdk/package.json
+++ b/packages/internal/bridge/sdk/package.json
@@ -31,7 +31,7 @@
     "immutablex"
   ],
   "license": "Apache-2.0",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "module": "dist/module.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
@@ -39,9 +39,10 @@
     "lint": "eslint ./src --ext .ts --max-warnings=0",
     "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/bridge-sdk -c lint --fix",
     "test": "jest test",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build": "NODE_ENV=production rollup --config rollup.config.js"
   },
   "source": "src/index.ts",
   "type": "module",
-  "types": "dist/types.d.ts"
+  "types": "dist/index.d.ts"
 }
