--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "packages/immutablex_client",
     "packages/passport",
     "packages/provider",
+    "packages/orderbook",
     "packages/internal/toolkit",
     "packages/internal/dex/sdk",
     "packages/internal/dex/sdk-sample-app",
