--- a/packages/checkout/widgets-react/tsconfig.json
+++ b/packages/checkout/widgets-react/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "babel.test.config.js"]
+  "include": ["src", "babel.test.config.js", "global.d.ts"]
 }
