--- a/packages/internal/bridge/bridge-sample-app/.example.env
+++ b/packages/internal/bridge/bridge-sample-app/.example.env
@@ -2,7 +2,7 @@
 export ROOT_PROVIDER=https://eth-sepolia.g.alchemy.com/v2/xxxxxxxxxxxxxxxx
 # RPC URL for child chain, i.e. L2
 export CHILD_PROVIDER=https://xxxxxxxxxxxxxxxx
-# Private Key of the deppsitor
+# Private key of the depositor
 export PRIVATE_KEY=xxxxxxxxxxxxxxxx
 # Address of the depositor
 export DEPOSITOR_ADDRESS=0xxxxxxxxxxxxx
