SMR-1144: Finish Example Deposit Script [NO-CHANGELOG] (#228)

--- a/packages/internal/bridge/bridge-sample-app/.example.env
+++ b/packages/internal/bridge/bridge-sample-app/.example.env
@@ -1,7 +1,14 @@
+# RPC URL for the root chain, i.e. L1
 export ROOT_PROVIDER=https://eth-sepolia.g.alchemy.com/v2/xxxxxxxxxxxxxxxx
+# RPC URL for child chain, i.e. L2
 export CHILD_PROVIDER=https://xxxxxxxxxxxxxxxx
+# Private key of the depositor
 export PRIVATE_KEY=xxxxxxxxxxxxxxxx
+# Address of the depositor
 export DEPOSITOR_ADDRESS=0xxxxxxxxxxxxx
+# Address of the desired recipient on L2
 export RECIPIENT_ADDRESS=0xxxxxxxxxxxxx
+# Token address to be deposited
 export TOKEN_ADDRESS=0xxxxxxxxxxxxx
-export DEPOSIT_AMOUNT=10
+# Depsit amount (amount will be multiplied by 10^18)
+export DEPOSIT_AMOUNT=0.001
