--- a/packages/internal/bridge/bridge-sample-app/package.json
+++ b/packages/internal/bridge/bridge-sample-app/package.json
@@ -13,9 +13,9 @@
   },
   "private": true,
   "scripts": {
-    "lint": "eslint ./src --ext .ts --max-warnings=0",
+    "build": "",
     "deposit": "ts-node --esm ./src/index.ts",
-    "build": ""
+    "lint": "eslint ./src --ext .ts --max-warnings=0"
   },
   "type": "module"
 }
