add craft card upgrade page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@release-it/keep-a-changelog": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "buffer": "^5.5.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -38,7 +39,7 @@
     "build": "wsrun -p @imtbl/sdk -p @imtbl/checkout-widgets -e -r --stages build && yarn syncpack:format",
     "build:all": "wsrun --stages build",
     "lint": "wsrun --exclude-missing -e lint",
-    "lint:ci": "./lint-ci.sh",
+    "lint:ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB $(git rev-parse HEAD^1) | grep  -E '(.js$|.ts$|.tsx$)') --ext .ts,.jsx,.tsx --max-warnings=0",
     "postinstall": "husky install",
     "release": "release-it",
     "syncpack:check": "yarn syncpack list-mismatches",
