--- a/packages/economy/services/package.json
+++ b/packages/economy/services/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-formidable": "^1.2.0",
     "@types/helmet": "^4.0.0",
