--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 /sdk @immutable/developer-experience
 /packages/immutablex_client @immutable/developer-experience
 /packages/config @immutable/developer-experience
-/packages/internal/toolkit @immutable/developer-experience
+/packages/internal/toolkit @immutable/wallets
 /packages/internal/dex @immutable/tokens
 /packages/internal/bridge @immutable/rollups
 /packages/passport @immutable/passport
