--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
       "tsconfigRootDir": ".",
       "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint"]
+    "plugins": ["@typescript-eslint"],
+    "rules": {
+    	"max-len": "off" // turned off due to type annotations
+    }
 }
   
