--- a/packages/internal/crypto-fiat/package.json
+++ b/packages/internal/crypto-fiat/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
+  "dependencies": {
+    "axios": "^1.3.5"
+  },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
@@ -42,8 +45,5 @@
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "axios": "^1.4.0"
-  }
+  "types": "dist/index.d.ts"
 }
