--- a/packages/internal/crypto-fiat/package.json
+++ b/packages/internal/crypto-fiat/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.3.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
@@ -38,7 +39,7 @@
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
-    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "prepare": "wsrun -r build",
     "test": "jest",
     "test:watch": "jest --watch",
