--- a/packages/internal/crypto-fiat/.eslintrc
+++ b/packages/internal/crypto-fiat/.eslintrc
@@ -10,6 +10,7 @@
   },
   "rules":{
     "no-restricted-syntax": "off",
-    "@typescript-eslint/no-unused-expressions": "off"
+    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/comma-dangle": "off"
   }
 }
