--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,7 @@
 /packages/immutablex_client @immutable/developer-experience
 /packages/config @immutable/developer-experience
 /packages/internal/toolkit @immutable/wallets
+/packages/internal/cryptofiat @immutable/wallets
 /packages/internal/dex @immutable/tokens
 /packages/internal/bridge @immutable/rollups
 /packages/passport @immutable/passport
