validate environment in sample app

--- a/packages/checkout/sdk-sample-app/package.json
+++ b/packages/checkout/sdk-sample-app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@biom3/react": "^0.3.0-beta",
     "@imtbl/checkout-sdk": "0.0.0",
+    "@imtbl/config": "0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
