--- a/packages/internal/dex/sdk/.eslintrc
+++ b/packages/internal/dex/sdk/.eslintrc
@@ -63,6 +63,14 @@
     ],
     "import/prefer-default-export": ["off"],
     "no-plusplus": ["off"],
-    "max-classes-per-file": ["off"]
+    "max-classes-per-file": ["off"],
+    "max-len": ["error", { "comments": 120, "code": 120 }],
+    "no-restricted-syntax": [
+      "error",
+      "ForInStatement",
+      "LabeledStatement",
+      "WithStatement"
+    ],
+    "import/no-extraneous-dependencies": ["off"]
   }
 }
