turn off return-await eslint rule

--- a/packages/internal/dex/sdk/.eslintrc
+++ b/packages/internal/dex/sdk/.eslintrc
@@ -71,6 +71,7 @@
       "LabeledStatement",
       "WithStatement"
     ],
-    "import/no-extraneous-dependencies": ["off"]
+    "import/no-extraneous-dependencies": ["off"],
+    "@typescript-eslint/return-await": ["off"]
   }
 }
