--- a/packages/internal/cryptofiat/.eslintrc
+++ b/packages/internal/cryptofiat/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "ignorePatterns": [],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "project": "./tsconfig.json",
