--- a/packages/internal/cryptofiat/.eslintrc
+++ b/packages/internal/cryptofiat/.eslintrc
@@ -7,6 +7,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-restricted-syntax": "off"
+        "no-restricted-syntax": "off",
+        "@typescript-eslint/naming-convention": "off"
     }
 }
