--- a/packages/checkout/widgets-sample-app/package.json
+++ b/packages/checkout/widgets-sample-app/package.json
@@ -14,6 +14,7 @@
     ]
   },
   "dependencies": {
+    "@imtbl/config": "0.0.0",
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
     "react": "^18.2.0",
