--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json",
+      "tsconfigRootDir": ".",
+      "sourceType": "module"
+    },
     "plugins": ["@typescript-eslint"]
 }
   
