--- a/packages/internal/dex/sdk-sample-app/package.json
+++ b/packages/internal/dex/sdk-sample-app/package.json
@@ -8,7 +8,6 @@
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "^8.37.0",
-    "eslint-config-next": "13.3.1",
     "ethers": "^5.7.2",
     "next": "13.3.1",
     "postcss": "8.4.23",
@@ -20,7 +19,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "eslint ./src --ext .ts --max-warnings=0",
     "setup": "cd ../../../../ && yarn build:all",
     "start": "next start"
   }
