--- a/packages/internal/bridge/sdk/package.json
+++ b/packages/internal/bridge/sdk/package.json
@@ -5,12 +5,15 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@imtbl/config": "0.0.0",
+    "@jest/globals": "^29.5.0",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
