DX-2071: Fix for changelog checker github action [NO-CHANGELOG] (#264)

--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -14,20 +14,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
       - if: ${{ contains(github.event.pull_request.title, 'NO-CHANGELOG') }}
         name: Add comment about skipping check
         uses: mshick/add-pr-comment@v2
         with:
           message: |
-            Skipping changelog updated check. Detected 'NO-CHANGELOG' in PR title.
+            Skipping changelog updated check. Detected `NO-CHANGELOG` in PR title.
 
       - if: ${{ !contains(github.event.pull_request.title, 'NO-CHANGELOG') }}
         name: Check Changelog Updated
         id: changelog
         run: |
-          echo "CHANGELOG_UPDATED=$(git diff --name-only -r origin/main origin/${GITHUB_HEAD_REF} CHANGELOG.md)" >> $GITHUB_OUTPUT
+          echo "CHANGELOG_UPDATED=$(git diff --name-only --diff-filter=ACMRTUXB origin/main origin/${GITHUB_HEAD_REF} CHANGELOG.md)" >> $GITHUB_OUTPUT
 
       - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
         name: Run step only when any of the above files changed.
