--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -28,7 +28,6 @@ jobs:
         id: changelog
         run: |
           echo "CHANGELOG_UPDATED=$(git diff --name-only --diff-filter=ACMRTUXB origin/main CHANGELOG.md)" >> $GITHUB_OUTPUT
-          echo $CHANGELOG_UPDATED
 
       - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
         name: Run step only when any of the above files changed.
@@ -40,3 +39,10 @@ jobs:
       - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
         run: |
           exit 1
+
+      - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED == 'CHANGELOG.md'
+        name: Run step only when any of the above files changed.
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            Changelog update detected!
