use transform ignore patterns

--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -49,9 +49,9 @@
     ]
   },
   "jest": {
-    "moduleNameMapper": {
-      "axios": "axios/dist/node/axios.cjs"
-    }
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)"
+    ]
   },
   "private": true,
   "scripts": {
