Fix remaining lint issues in packages/provider
Ignore some that are best fixed by the wallets team.

Co-authored-by: Nathan Ballantyne <Nathan-Ballantyne@users.noreply.github.com>

--- a/packages/provider/.eslintrc
+++ b/packages/provider/.eslintrc
@@ -15,7 +15,7 @@
       },
       {
         "selector": "objectLiteralProperty",
-        "format": ["camelCase"]
+        "format": ["camelCase","snake_case"]
       },
       {
         "selector": "variable",
