--- a/packages/economy/services/package.json
+++ b/packages/economy/services/package.json
@@ -3,7 +3,9 @@
   "description": "Mock server application for the Economy SDK",
   "version": "0.0.0",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
