--- a/packages/internal/dex/sdk/package.json
+++ b/packages/internal/dex/sdk/package.json
@@ -8,8 +8,7 @@
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v3-sdk": "^3.9.0",
-    "ethers": "^5.7.2",
-    "jsbi": "^3.1.4"
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
