--- a/packages/internal/dex/sdk-sample-app/package.json
+++ b/packages/internal/dex/sdk-sample-app/package.json
@@ -9,7 +9,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
-    "next": "^13.4.1",
+    "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
