--- a/packages/economy/playground/tsconfig.json
+++ b/packages/economy/playground/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
     "noEmit": true,
     "allowJs": false,
     "removeComments": false,
@@ -15,9 +16,14 @@
     "esModuleInterop": true,
     "declaration": true,
     "resolveJsonModule": true,
+    "isolatedModules": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "src/types.ts"],
   "exclude": ["node_modules", "dist"]
