--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -9,7 +9,9 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "axios": "^1.3.5",
-    "rxjs": "^7.8.0"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
