--- a/sdk/package.json
+++ b/sdk/package.json
@@ -11,7 +11,6 @@
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@opensea/seaport-js": "^1.2.0",
     "axios": "^1.3.5",
     "bn.js": "^5.2.1",
     "enc-utils": "^3.0.0",
@@ -62,6 +61,18 @@
     "./passport": {
       "types": "./dist/passport.d.ts",
       "import": "./dist/passport.js"
+    },
+    "./provider": {
+      "types": "./dist/provider.d.ts",
+      "import": "./dist/provider.js"
+    },
+    "./checkout_sdk": {
+      "types": "./dist/checkout_sdk.d.ts",
+      "import": "./dist/checkout_sdk.js"
+    },
+    "./checkout_widgets": {
+      "types": "./dist/checkout_widgets.d.ts",
+      "import": "./dist/checkout_widgets.js"
     }
   },
   "files": [
