--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
+    "@imtbl/config": "0.0.0",
+    "@imtbl/provider": "0.0.0",
     "@swc/helpers": "~0.5.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
