--- a/packages/checkout/sdk-sample-app/.eslintrc
+++ b/packages/checkout/sdk-sample-app/.eslintrc
@@ -1,5 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
+  "ignorePatterns": ".",
   "parserOptions": {
     "project": "./tsconfig.json",
     "tsconfigRootDir": ".",
