--- a/sdk/.eslintrc
+++ b/sdk/.eslintrc
@@ -5,5 +5,9 @@
     "project": "./tsconfig.json",
     "tsconfigRootDir": ".",
     "sourceType": "module"
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": ["off"],
+    "import/export": ["off"]
   }
 }
