--- a/sdk/package.json
+++ b/sdk/package.json
@@ -34,6 +34,7 @@
     "@yarnpkg/cli": "3.5.0",
     "@yarnpkg/core": "3.5.0",
     "eslint": "^8.37.0",
+    "glob": "^10.2.3",
     "rollup": "^3.17.2",
     "rollup-plugin-dts": "^5.3.0",
     "semver": "^7.4.0",
@@ -89,6 +90,7 @@
   "scripts": {
     "build": "yarn packageList && yarn updateDependencies && yarn regenModules && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
     "build:only": "rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
+    "copyBrowserBundles": "node scripts/copyBrowserBundles.js",
     "generateIndex": "node scripts/generateIndex.js",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "packageList": "./scripts/generate-package-list.sh",
