--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -18,6 +18,7 @@
     "@biom3/react": "^0.3.0-beta",
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/checkout-sdk": "0.0.0",
+    "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/cryptofiat": "0.0.0",
     "ethers": "^5.7.2",
@@ -26,7 +27,6 @@
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
-    "@imtbl/checkout-sdk": "0.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
