--- a/sdk/package.json
+++ b/sdk/package.json
@@ -62,6 +62,10 @@
       "types": "./dist/passport.d.ts",
       "import": "./dist/passport.js"
     },
+    "./orderbook": {
+      "types": "./dist/orderbook.d.ts",
+      "import": "./dist/orderbook.js"
+    },
     "./provider": {
       "types": "./dist/provider.d.ts",
       "import": "./dist/provider.js"
