extend root .eslintrc - wip

--- a/packages/internal/cryptofiat/.eslintrc
+++ b/packages/internal/cryptofiat/.eslintrc
@@ -1,13 +1,14 @@
 {
-    "ignorePatterns": [],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "project": "./tsconfig.json",
-        "tsconfigRootDir": ".",
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-restricted-syntax": "off",
-        "@typescript-eslint/naming-convention": "off"
-    }
+  "extends": ["../.eslintrc"],
+  "ignorePatterns": [],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "tsconfigRootDir": ".",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-restricted-syntax": "off",
+    "@typescript-eslint/naming-convention": "off"
+  }
 }
