--- a/packages/checkout/.eslintrc
+++ b/packages/checkout/.eslintrc
@@ -1,8 +1,8 @@
 {
+  "extends": ["../../.eslintrc"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
-    "tsconfigRootDir": ".",
-    "sourceType": "module"
+    "tsconfigRootDir": "."
   }
 }
