--- a/packages/passport/.eslintrc
+++ b/packages/passport/.eslintrc
@@ -12,6 +12,15 @@
         "selector": "variable",
         "format": ["camelCase", "UPPER_CASE", "snake_case"]
       }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 120,
+        "ignoreComments": true,
+        "ignoreTrailingComments": true,
+        "ignoreStrings": true
+      }
     ]
   }
 }
