[NO-CHANGELOG][TD-671] add orderbook to sdk (#289)
Co-authored-by: Chris James <chris@webglowit.net>

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "packages/immutablex_client",
     "packages/passport",
     "packages/provider",
+    "packages/orderbook",
     "packages/internal/toolkit",
     "packages/internal/cryptofiat",
     "packages/internal/dex/sdk",
