--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -42,7 +42,7 @@ jobs:
         run: yarn syncpack:check
 
       - name: Lint
-        run: yarn lint:ci
+        run: yarn lint
 
       - name: Build
         run: yarn build
